# kill

./: .gitignore  CLAUDE.md  README.md  SETUP.md  SETUP_SOLANA.md  airdrop.csv  cli.js  env.example  game-specs.md  gas-report.txt  gas-report0.txt  hardhat.config.js  kill.sh  package-lock.json  package.json
agents/: agent-strategy.json  agent.js  agent0.js  agent1.js  agent2.js  agent3.js  common-config.json  common.js  config.json  nuke.js  playbook.json  seed0.js
agents-sol/: KillGame.json  agent.js  common.js  config.json  playbook.json
cache/: console-history.txt  solidity-files-cache.json  validations.json
contracts/: KillFaucet.sol  KillGame.sol  KillToken.sol
contracts-solana/: Anchor.toml
contracts-solana/programs/kill_game/: Cargo.toml
contracts-solana/programs/kill_game/src/: constants.rs  errors.rs  lib.rs  state.rs
contracts-solana/programs/kill_game/src/instructions/: initialize.rs  kill.rs  mod.rs  move_units.rs  spawn.rs
contracts-solana/programs/kill_token/: Cargo.toml
contracts-solana/programs/kill_token/src/: lib.rs
kill-indexer/: catchup.mjs  listener.mjs  package-lock.json  package.json  reindex.mjs  replay-tx.mjs  setup-webhook.mjs  snapshot.mjs  test-helius.mjs
scripts/: create-pool.js  deploy.js  kill.js  mint.js  move.js  sim.js  spawn.js
scripts-solana/: airdrop.js  balance.js  common.js  fund-faucet.js  fund-vault.js  init.js  kill.js  mint.js  move.js  new-wallet.js  spawn.js  stacks.js  stats.js
test/: econsim.js  killgame.js  multicall.js
token-registry/: README.md
viewer/: index.html  kill.ps1  kill.sh
(+228 files in other folders)
