[package]
name = "kill_token"
version = "0.1.0"
description = "KILL Token — capped SPL mint with PDA-controlled mint authority"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kill_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1" }
anchor-spl = { version = "0.32.1", features = ["token"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
